--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,8 @@ dependencies {
 
     // Splitties para startActivity sem boilerplate
     implementation("com.louiscad.splitties:splitties-activities:3.0.0-alpha06")
+
+    // Corrotina do Kotlin
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
+
 }
